# fn-monadic

./: .gitignore  stack.yaml
digestive-functors-fn/: ChangeLog.md  LICENSE  README.md  digestive-functors-fn.cabal
digestive-functors-fn/src/Web/Fn/: Digestive.hs
digestive-functors-fn/src/Web/Fn/Digestive/: Internal.hs  Monadic.hs
digestive-functors-fn/src/Web/Fn/Monadic/: Digestive.hs
fn-monadic/: ChangeLog.md  README.md  fn-monadic.cabal
fn-monadic/src/Web/: Fn.hs
fn-monadic/src/Web/Fn/: Internal.hs  Monadic.hs  Response.hs
fn-monadic/test/: Spec.hs
hspec-fn/: ChangeLog.md  LICENSE  README.md  hspec-fn.cabal
hspec-fn/spec/: Main.hs
hspec-fn/src/Test/Hspec/: Fn.hs
