name:           fn-monadic
version:        0.1.0.0
description:    A monadic wrapper around the Fn web framework.
homepage:       https://github.com/githubuser/fn-monadic#readme
bug-reports:    https://github.com/githubuser/fn-monadic/issues
author:         Remeike Forbes
maintainer:     dev@jacobinmag.com
copyright:      2021 Remeike Forbes
category:       Web
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type:     git
  location: https://github.com/githubuser/fn-monadic

library
  hs-source-dirs:      src
  exposed-modules:     Web.Fn.Monadic
  build-depends:       base >= 4.7 && < 6
                     , aeson
                     , blaze-builder
                     , bytestring
                     , fn
                     , http-types
                     , resourcet
                     , text
                     , wai >= 3
                     , wai-extra >= 3
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite fn-monadic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
