name:           fn-monadic
version:        0.1.0.0
homepage:       https://github.com/githubuser/fn-monadic#readme
bug-reports:    https://github.com/githubuser/fn-monadic/issues
author:         Remeike Forbes
maintainer:     dev@jacobinmag.com
copyright:      2021 Remeike Forbes
category:       Web
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
description:
  A fork of the Fn web framework, with an additional monadic interface.

source-repository head
  type:     git
  location: https://github.com/githubuser/fn-monadic

library
  hs-source-dirs:      src
  exposed-modules:     Web.Fn
                     , Web.Fn.Monadic
                     , Web.Fn.Response
  other-modules:       Web.Fn.Internal
  build-depends:       base >= 4.7 && < 6
                     , aeson
                     , blaze-builder
                     , bytestring
                     , case-insensitive
                     , directory
                     , filepath
                     , http-types
                     , mime-types
                     , mtl
                     , resourcet
                     , text
                     , wai >= 3
                     , wai-extra >= 3
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite fn-monadic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , blaze-builder
                     , bytestring
                     , case-insensitive
                     , directory
                     , filepath
                     , fn-monadic
                     , hspec
                     , text
                     , http-types
                     , mime-types
                     , mtl
                     , resourcet
                     , wai
                     , wai-extra
                     , unordered-containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
