name:                hspec-fn
version:             0.1.1.0
synopsis:            A library for testing with Hspec and the Snap Web Framework
homepage:            https://github.com/dbp/hspec-snap
license:             ISC
license-file:        LICENSE
author:              Daniel Patterson and Elizabeth Horacek
maintainer:          workers@positiondev.com
extra-source-files:  CHANGELOG
category:            Web, Snap
build-type:          Simple
cabal-version:       >=1.8
source-repository head
  type:     git
  location: https://github.com/positiondev/hspec-fn

library
  exposed-modules:
        Test.Hspec.Fn
  hs-source-dirs:  src
  build-depends:   base                     >= 4.6
                 , aeson                    >= 0.6
                 , bytestring               >= 0.9
                 , containers               >= 0.4
                 , digestive-functors       >= 0.7
                 , directory
                 , hspec                    >= 2.4
                 , hspec-core               >= 2.4
                 , hxt                      >= 9.3
                 , HandsomeSoup             >= 0.3
                 , lens                     >= 3.10
                 , mtl                      >= 2
                 , text                     >= 0.11
                 , transformers             >= 0.3
                 , wai
                 , wai-extra
                 , http-types
                 , fn-monadic
                 , blaze-builder

Test-Suite test-hspec-fn
  type:            exitcode-stdio-1.0
  hs-source-dirs:  spec
  main-is:         Main.hs
  build-depends:   base                     >= 4.6
                 , aeson                    >= 0.6
                 , bytestring               >= 0.9
                 , containers               >= 0.4
                 , digestive-functors       >= 0.7
                 , directory
                 , hspec                    >= 2.4
                 , hspec-core               >= 2.4
                 , hxt                      >= 9.3
                 , HandsomeSoup             >= 0.3
                 , lens                     >= 3.10
                 , mtl                      >= 2
                 , text                     >= 0.11
                 , transformers             >= 0.3
                 , wai
                 , wai-extra
                 , http-types
                 , fn-monadic
                 , blaze-builder
                 , hspec-fn
